force-app/main/default/objects/Project__c/fields/Access_ECM__c.field-meta.xml
<CustomField>
    <fullName>Access_ECM__c</fullName>
    <description>This field allows ASPs/partners to access the ECM directly from the project detail page in the community</description>
    <formula>HYPERLINK(&quot;https://spausnet.sharepoint.com/Pages/ECM-redirect-page.aspx&quot;, &quot;Click here to access ECM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access ECM</label>
    <type>Text</type>
</CustomField>