force-app/main/default/objects/Project__c/fields/AffectedPersonMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>AffectedPersonMobileNumber__c</fullName>
    <label>Affected Person: Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>