force-app/main/default/objects/Project__c/fields/AffectedPersonName__c.field-meta.xml
<CustomField>
    <fullName>AffectedPersonName__c</fullName>
    <label>Affected Person: Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>