force-app/main/default/objects/Project__c/fields/AffectedPersonPostcode__c.field-meta.xml
<CustomField>
    <fullName>AffectedPersonPostcode__c</fullName>
    <label>Affected Person: Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>