force-app/main/default/objects/Project__c/fields/AffectedPersonSiteAddress__c.field-meta.xml
<CustomField>
    <fullName>AffectedPersonSiteAddress__c</fullName>
    <label>Affected Person: Site Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>