force-app/main/default/objects/Project__c/fields/AffectedPersonState__c.field-meta.xml
<CustomField>
    <fullName>AffectedPersonState__c</fullName>
    <label>Affected Person: State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>