force-app/main/default/objects/Project__c/fields/AffectedPersonSuburb__c.field-meta.xml
<CustomField>
    <fullName>AffectedPersonSuburb__c</fullName>
    <label>Affected Person: Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>