force-app/main/default/objects/Project__c/fields/AgentABN__c.field-meta.xml
<CustomField>
    <fullName>AgentABN__c</fullName>
    <description>Australian Business Number
Must receive just numbers</description>
    <label>Agent ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>