force-app/main/default/objects/Project__c/fields/AgentCity__c.field-meta.xml
<CustomField>
    <fullName>AgentCity__c</fullName>
    <description>City portion of the customer agent&apos;s address, for example, San Francisco. Up to 40 characters are allowed in this field.</description>
    <label>Agent City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>