force-app/main/default/objects/Project__c/fields/AgentCompany__c.field-meta.xml
<CustomField>
    <fullName>AgentCompany__c</fullName>
    <description>Name of agent company with which the applicant is affiliated. Up to 255 characters are allowed in this field.</description>
    <label>Agent Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>