force-app/main/default/objects/Project__c/fields/AgentEmail__c.field-meta.xml
<CustomField>
    <fullName>AgentEmail__c</fullName>
    <description>Email address of customer agent. Must be a valid email address in the form: jsmith@acme.com. Up to 80 characters are allowed in this field.</description>
    <label>Agent Email</label>
    <type>Email</type>
</CustomField>