force-app/main/default/objects/Project__c/fields/AgentFirstName__c.field-meta.xml
<CustomField>
    <fullName>AgentFirstName__c</fullName>
    <description>First name of the customer agent, as displayed on the lead edit page. Up to 40 characters are allowed in this field.</description>
    <label>Agent First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>