force-app/main/default/objects/Project__c/fields/AgentLastName__c.field-meta.xml
<CustomField>
    <fullName>AgentLastName__c</fullName>
    <description>Last name of the customer agent, as displayed on the lead edit page. Up to 80 characters are allowed in this field.</description>
    <label>Agent Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>