force-app/main/default/objects/Project__c/fields/AgentPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AgentPostalCode__c</fullName>
    <description>ZIP code or postal code portion of the customer agent&apos;s address. Up to 20 characters are allowed in this field.</description>
    <label>Agent Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>