force-app/main/default/objects/Project__c/fields/AgentState__c.field-meta.xml
<CustomField>
    <fullName>AgentState__c</fullName>
    <description>State or province portion of customer agent’s address. Entry is selected from a picklist of standard values, or entered as text. Up to 80 characters are allowed if the field is a text field.</description>
    <label>Agent State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>