force-app/main/default/objects/Project__c/fields/AgentStreet__c.field-meta.xml
<CustomField>
    <fullName>AgentStreet__c</fullName>
    <description>Street address for the customer agent, for example, 475 Boardwalk Ave. Up to 255 characters are allowed in this field.</description>
    <label>Agent Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>