force-app/main/default/objects/Project__c/fields/AplContact_Ck__c.field-meta.xml
<CustomField>
    <fullName>AplContact_Ck__c</fullName>
    <formula>IF(ISPICKVAL(IsPropertyOwner__c,&apos;No&apos;),&apos;Email~&apos;+ApplicantContact__r.Email+&apos;;&apos;+&apos;Role~Signer 1;&apos;+&apos;FirstName~&apos;+ApplicantContact__r.FirstName+&apos;;&apos;+&apos;LastName~&apos;+ApplicantContact__r.LastName+&apos;,&apos;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Contact _Check</label>
    <type>Text</type>
</CustomField>