force-app/main/default/objects/Project__c/fields/AppCommunicationPreference__c.field-meta.xml
<CustomField>
    <fullName>AppCommunicationPreference__c</fullName>
    <formula>TEXT(ApplicantContact__r.CommunicationPreference__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Communication Preference</label>
    <type>Text</type>
</CustomField>