force-app/main/default/objects/Project__c/fields/ApplicantAccount__c.field-meta.xml
<CustomField>
    <fullName>ApplicantAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Applicant)</relationshipLabel>
    <relationshipName>Projects_Applicant</relationshipName>
    <type>Lookup</type>
</CustomField>