force-app/main/default/objects/Project__c/fields/ApplicantCommunicationPreference__c.field-meta.xml
<CustomField>
    <fullName>ApplicantCommunicationPreference__c</fullName>
    <label>Applicant Communication Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>