force-app/main/default/objects/Project__c/fields/ApplicantContact__c.field-meta.xml
<CustomField>
    <fullName>ApplicantContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Applicant Contact)</relationshipLabel>
    <relationshipName>Projects_App_Data</relationshipName>
    <type>Lookup</type>
</CustomField>