force-app/main/default/objects/Project__c/fields/ApplicantLicenseAllocation__c.field-meta.xml
<CustomField>
    <fullName>ApplicantLicenseAllocation__c</fullName>
    <formula>TEXT(ApplicantContact__r.UserCommunityLicense__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant License Allocation</label>
    <type>Text</type>
</CustomField>