force-app/main/default/objects/Project__c/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <label>Application Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>