force-app/main/default/objects/Project__c/fields/ASP__c.field-meta.xml
<CustomField>
    <fullName>ASP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the ASP chosen by the customer for External Design or External Construction.</description>
    <label>ASP</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (ASP)</relationshipLabel>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>