force-app/main/default/objects/Project__c/fields/ASPContact__c.field-meta.xml
<CustomField>
    <fullName>ASPContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASP Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (ASP Contact)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>