force-app/main/default/objects/Project__c/fields/ASPId__c.field-meta.xml
<CustomField>
    <fullName>ASPId__c</fullName>
    <label>ASP Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>