force-app/main/default/objects/Project__c/fields/ASPnotDisplayedonList__c.field-meta.xml
<CustomField>
    <fullName>ASPnotDisplayedonList__c</fullName>
    <description>tv-255</description>
    <label>ASP Not Displayed on List</label>
    <type>TextArea</type>
</CustomField>