force-app/main/default/objects/Project__c/fields/ASPRequiredServices__c.field-meta.xml
<CustomField>
    <fullName>ASPRequiredServices__c</fullName>
    <label>ASP Required Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design and Construction</fullName>
            </value>
            <value>
                <fullName>Construction Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>