force-app/main/default/objects/Project__c/fields/AspSelected__c.field-meta.xml
<CustomField>
    <fullName>AspSelected__c</fullName>
    <label>Asp Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>