force-app/main/default/objects/Project__c/fields/AspServices__c.field-meta.xml
<CustomField>
    <fullName>AspServices__c</fullName>
    <label>Asp Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>