force-app/main/default/objects/Project__c/fields/AssettoRelocateorRemove__c.field-meta.xml
<CustomField>
    <fullName>AssettoRelocateorRemove__c</fullName>
    <label>Asset to Relocate or Remove</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pole(s)</fullName>
            </value>
            <value>
                <fullName>Low voltage underground pit</fullName>
            </value>
            <value>
                <fullName>Pillar</fullName>
            </value>
            <value>
                <fullName>Light pole</fullName>
            </value>
            <value>
                <fullName>Low voltage overhead service cable</fullName>
            </value>
            <value>
                <fullName>KIOSK substation</fullName>
            </value>
            <value>
                <fullName>Low voltage cabinet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>