force-app/main/default/objects/Project__c/fields/AssetType__c.field-meta.xml
<CustomField>
    <fullName>AssetType__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relocate</fullName>
            </value>
            <value>
                <fullName>Underground Pit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>