force-app/main/default/objects/Project__c/fields/AssignmentRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>AssignmentRejectionReason__c</fullName>
    <description>Assignment Rejection reason</description>
    <label>Assignment Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProjectAssigmentStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ProjectRejectionReasons</valueSetName>
    </valueSet>
</CustomField>