force-app/main/default/objects/Project__c/fields/ASTDeadline__c.field-meta.xml
<CustomField>
    <fullName>ASTDeadline__c</fullName>
    <label>AST Deadline</label>
    <type>Date</type>
</CustomField>