force-app/main/default/objects/Project__c/fields/AusNetPermitResponse__c.field-meta.xml
<CustomField>
    <fullName>AusNetPermitResponse__c</fullName>
    <label>AusNet Permit Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>