force-app/main/default/objects/Project__c/fields/AusNetReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>AusNetReferenceNumber__c</fullName>
    <label>AusNet Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>