force-app/main/default/objects/Project__c/fields/AuthorisedRepresentative__c.field-meta.xml
<CustomField>
    <fullName>AuthorisedRepresentative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TV-1422</description>
    <label>Authorised Representative</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Authorised Representative)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>