force-app/main/default/objects/Project__c/fields/AuthorizedRepresentativeContact__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedRepresentativeContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Representative Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Authorized Representative Contact)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>