force-app/main/default/objects/Project__c/fields/AuthorizedRepSuburb__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedRepSuburb__c</fullName>
    <label>Authorized Rep Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>