force-app/main/default/objects/Project__c/fields/BulkEfficientLanternReplacement__c.field-meta.xml
<CustomField>
    <fullName>BulkEfficientLanternReplacement__c</fullName>
    <label>Bulk Efficient Lantern Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>