force-app/main/default/objects/Project__c/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing too high</fullName>
            </value>
            <value>
                <fullName>Not ready to build</fullName>
            </value>
            <value>
                <fullName>My requirements have changed</fullName>
            </value>
            <value>
                <fullName>3rd party restrictions</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>