force-app/main/default/objects/Project__c/fields/CapacityOfAirConditioning__c.field-meta.xml
<CustomField>
    <fullName>CapacityOfAirConditioning__c</fullName>
    <label>Capacity Of Air Conditioning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>