force-app/main/default/objects/Project__c/fields/CapacityofElectricHotWaterUnits__c.field-meta.xml
<CustomField>
    <fullName>CapacityofElectricHotWaterUnits__c</fullName>
    <label>Capacity of Electric Hot Water Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>