force-app/main/default/objects/Project__c/fields/CapacityofEVChargingUnits__c.field-meta.xml
<CustomField>
    <fullName>CapacityofEVChargingUnits__c</fullName>
    <label>Capacity of EV Charging Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>