force-app/main/default/objects/Project__c/fields/CapacityofFloorSlabHeaters__c.field-meta.xml
<CustomField>
    <fullName>CapacityofFloorSlabHeaters__c</fullName>
    <label>Capacity of Floor Slab Heaters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>