force-app/main/default/objects/Project__c/fields/CapacityOfPumps__c.field-meta.xml
<CustomField>
    <fullName>CapacityOfPumps__c</fullName>
    <label>Capacity Of Pumps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>