force-app/main/default/objects/Project__c/fields/CapacityOfSolarPanel__c.field-meta.xml
<CustomField>
    <fullName>CapacityOfSolarPanel__c</fullName>
    <label>Capacity Of Solar Panel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>