force-app/main/default/objects/Project__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City portion of the applicant&apos;s address, for example, San Francisco. Up to 40 characters are allowed in this field.</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>