force-app/main/default/objects/Project__c/fields/ClientRequireDesign__c.field-meta.xml
<CustomField>
    <fullName>ClientRequireDesign__c</fullName>
    <label>Client Require Design</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>