force-app/main/default/objects/Project__c/fields/CMNumber__c.field-meta.xml
<CustomField>
    <fullName>CMNumber__c</fullName>
    <externalId>true</externalId>
    <label>CM Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>