force-app/main/default/objects/Project__c/fields/CMProgressBar__c.field-meta.xml
<CustomField>
    <fullName>CMProgressBar__c</fullName>
    <label>Progress Bar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMProgressBar</valueSetName>
    </valueSet>
</CustomField>