force-app/main/default/objects/Project__c/fields/CMType__c.field-meta.xml
<CustomField>
    <fullName>CMType__c</fullName>
    <label>CM Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>