force-app/main/default/objects/Project__c/fields/CommunityChatterLink__c.field-meta.xml
<CustomField>
    <fullName>CommunityChatterLink__c</fullName>
    <label>Community Chatter Link</label>
    <type>Url</type>
</CustomField>