force-app/main/default/objects/Project__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Company name of the applicant if applicable</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>