force-app/main/default/objects/Project__c/fields/ConfirmedAddress__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedAddress__c</fullName>
    <label>Confirmed Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>