force-app/main/default/objects/Project__c/fields/ConstructionCommencementDate__c.field-meta.xml
<CustomField>
    <fullName>ConstructionCommencementDate__c</fullName>
    <label>Construction Commencement Date</label>
    <type>Date</type>
</CustomField>