force-app/main/default/objects/Project__c/fields/ConstructionCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>ConstructionCompletionDate__c</fullName>
    <label>Construction Completion Date</label>
    <type>Date</type>
</CustomField>