force-app/main/default/objects/Project__c/fields/ContactFirstName_fx__c.field-meta.xml
<CustomField>
    <fullName>ContactFirstName_fx__c</fullName>
    <formula>ApplicantContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>