force-app/main/default/objects/Project__c/fields/ContestabilityType__c.field-meta.xml
<CustomField>
    <fullName>ContestabilityType__c</fullName>
    <label>Contestability Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDIC</fullName>
            </value>
            <value>
                <fullName>EDEC</fullName>
            </value>
            <value>
                <fullName>IDEC</fullName>
            </value>
            <value>
                <fullName>IDEC-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>