force-app/main/default/objects/Project__c/fields/ContractDueDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDueDate__c</fullName>
    <label>Contract Due Date</label>
    <type>Date</type>
</CustomField>