force-app/main/default/objects/Project__c/fields/CUDesignTemplate__c.field-meta.xml
<CustomField>
    <fullName>CUDesignTemplate__c</fullName>
    <label>CU Design Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>