force-app/main/default/objects/Project__c/fields/CurrentDate_plus_7_Days__c.field-meta.xml
<CustomField>
    <fullName>CurrentDate_plus_7_Days__c</fullName>
    <formula>Today() + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentDate plus 7 Days</label>
    <type>Date</type>
</CustomField>