force-app/main/default/objects/Project__c/fields/CurrentDatePlus30Days_fx__c.field-meta.xml
<CustomField>
    <fullName>CurrentDatePlus30Days_fx__c</fullName>
    <formula>TODAY() + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date Plus 30 Days</label>
    <type>Date</type>
</CustomField>