force-app/main/default/objects/Project__c/fields/CurrentDatePlus60Days_fx__c.field-meta.xml
<CustomField>
    <fullName>CurrentDatePlus60Days_fx__c</fullName>
    <formula>TODAY() + 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date Plus 60 Days</label>
    <type>Date</type>
</CustomField>