force-app/main/default/objects/Project__c/fields/CurrentEmployee__c.field-meta.xml
<CustomField>
    <fullName>CurrentEmployee__c</fullName>
    <label>Current Employee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>