force-app/main/default/objects/Project__c/fields/CurrentTypeOfLantern__c.field-meta.xml
<CustomField>
    <fullName>CurrentTypeOfLantern__c</fullName>
    <label>Current Type Of Lantern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>