force-app/main/default/objects/Project__c/fields/DetailedScopeOfProject__c.field-meta.xml
<CustomField>
    <fullName>DetailedScopeOfProject__c</fullName>
    <label>Detailed Scope Of Project</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>