force-app/main/default/objects/Project__c/fields/DocuSignBrandId__c.field-meta.xml
<CustomField>
    <fullName>DocuSignBrandId__c</fullName>
    <formula>$CustomMetadata.TVE_Docusign__mdt.TVE_Custom_docusign_settings.Contract_BrandID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocuSign Brand Id</label>
    <type>Text</type>
</CustomField>