force-app/main/default/objects/Project__c/fields/DocuSignReminder_fx__c.field-meta.xml
<CustomField>
    <fullName>DocuSignReminder_fx__c</fullName>
    <formula>IF(ISPICKVAL(ContestabilityType__c,&apos;IDIC&apos;),$CustomMetadata.TVE_Docusign__mdt.TVE_Custom_docusign_settings.Reminder_60__c,$CustomMetadata.TVE_Docusign__mdt.TVE_Custom_docusign_settings.Reminder_120__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocuSign Reminder</label>
    <type>Text</type>
</CustomField>