force-app/main/default/objects/Project__c/fields/EasementMOALease__c.field-meta.xml
<CustomField>
    <fullName>EasementMOALease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in the Support Services &amp; Operations Checklist Flow and not displayed on the page layout</description>
    <label>Easement/MOA/Lease</label>
    <type>Checkbox</type>
</CustomField>