force-app/main/default/objects/Project__c/fields/ElectricitySupply__c.field-meta.xml
<CustomField>
    <fullName>ElectricitySupply__c</fullName>
    <label>Electricity Supply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>