force-app/main/default/objects/Project__c/fields/ElectricVehicleChargingLargestUnit__c.field-meta.xml
<CustomField>
    <fullName>ElectricVehicleChargingLargestUnit__c</fullName>
    <label>Electric Vehicle Charging Largest Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>